<resources>
    <string name="app_name">Crime Reporter and Missing Person</string>
    <string name="title_activity_insert">Insert Crimes</string>
    <string name="title_activity_second">Show Crimes</string>
    <string name="title_activity_third">Modify Crimes</string>
    <string name="add_crimes">Add crimes</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="show_crimes">Show Crimes</string>
    <string name="enter_crime_name_here">Enter crime name here</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="enter_year_of_crime">Enter year of crime</string>
    <string name="insert">Insert</string>
    <string name="id">ID</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>